search scrollbar and minor fix

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -6,6 +6,7 @@
 }
 
 #search-div {
+    display: none;
     position: absolute;
     left: 48px;
     top: 55px;
@@ -18,6 +19,9 @@
     top: 90px;
     background-color: rgba(250,250,250,0.85);
     min-width: 300px;
+    max-height: 150px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .search-item {
@@ -30,4 +34,20 @@
 
 .search-item:hover {
     background-color: rgba(233,233,233,0.85);
+}
+
+#search-result::-webkit-scrollbar {
+    width: 8px;
+}
+#search-result::-webkit-scrollbar-track {
+    background: #aaa;
+    border-radius: 4px;
+    margin: 5px 0;
+}
+#search-result::-webkit-scrollbar-thumb {
+    background: rgba(255,255,255,.5);
+    border-radius: 4px;
+}
+#search-result::-webkit-scrollbar-thumb:hover {
+    background: rgba(255,255,255,.7);
 }
